k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: sentinel-ingress
  namespace: sentinelai-dev

  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
    - http:
        paths:

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: sentinelai-service
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: sentinelai-frontend-service
                port:
                  number: 80
